Optimize code quality: fix bugs, resource leaks, NPEs, and modernize Java style
- Fix bug: missing 'which' prefix for xdg-open in detectLinuxSystemBrowser()
- Fix resource leak: use ProcessBuilder consistently instead of deprecated Runtime.exec()
- Fix resource leak: close InputStreamReader in IOUtils.copy() with try-with-resources
- Fix potential NPE: add null checks for resource.getLocation() and IFile adapter
- Fix memory leak: remove PropertyChangeListener in dispose()
- Replace e.printStackTrace() with proper Eclipse ILog logging
- Replace hardcoded VERSION with dynamic bundle version from MANIFEST.MF
- Modernize: use instanceof pattern matching (Java 16+), enhanced for-loops
- Simplify IOUtils.toString() using Java 17 InputStream.readAllBytes()
- Extract reusable resolveResource() and openResource() helper methods
- Convert IFileManagerExecutables from constant interface to final class
- Add private constructors to utility classes

Co-authored-by: unknowIfGuestInDream <57802425+unknowIfGuestInDream@users.noreply.github.com>